tests/src/frontend/syntax/invalid/invalid_pattern4.sk

fun test(): void {
  x as y
}
